--- a/.github/workflows/doc_pages_workflow.yml
+++ b/.github/workflows/doc_pages_workflow.yml
@@ -44,9 +44,9 @@ jobs:
           # ls ${here}/docs/docs/worked_examples
           # echo "Worked Examples:"
           # ls ${here}/docs/docs/worked_examples
-          # cd docs
-          # pwd
-          # ls
+          cd docs
+          pwd
+          ls
 
           # deploy docs
           git config --global user.email "ajoshy@eng.ucsd.edu"
