/docs folder renamed to /old_docs in workflow

--- a/.github/workflows/doc_pages_workflow.yml
+++ b/.github/workflows/doc_pages_workflow.yml
@@ -44,7 +44,7 @@ jobs:
           # ls ${here}/docs/docs/worked_examples
           # echo "Worked Examples:"
           # ls ${here}/docs/docs/worked_examples
-          cd docs
+          cd old_docs
           pwd
           ls
 
