--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,8 +24,10 @@ sphinx:
    # fail_on_warning: true
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
-# formats:
-#    - pdf
+formats:
+   - pdf
+   - epub
+   - htmlzip
 
 # Optionally declare the Python requirements required to build your docs
 python:
