--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -32,7 +32,7 @@ formats:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: docs/requirements.txt
+   - requirements: requirements.txt
    - method: pip
      path: .
 
