--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,5 +5,7 @@
 -r requirements.txt
 -r ./docs/requirements-docs.txt
 csdl @ git+https://github.com/LSDOlab/csdl.git
+csdl_alpha @ git+https://github.com/LSDOlab/csdl_alpha.git
+jax[cpu]
 openmdao
 qpsolvers
