Update old doc_pages_workflow, test_workflow. Remove requirements-docs,dev. Add optional deps to pyproject.toml, add dependency version specifiers. .readthedocs.yaml use pip install .[docs] now. requirements.txt is not used anywhere now.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -32,9 +32,11 @@ formats:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: docs/requirements-docs.txt
+   # - requirements: docs/requirements-docs.txt
    - method: pip
      path: .
+     extra_requirements:
+       - docs
 
 # If using a conda environment, 
 # add the path to the Conda environment file, relative to the root of the project.
