--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,43 +1,96 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
+# Install from source and run tests
 name: Tests
 
-# Whenever there is a pull request (PR) or push to the "main" branch, the jobs specified below will run.
 on: 
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
-# Here, we specify the automatic cloud based testing that will be ran on pushes/PRs to "main"
 jobs:
-  build:
+  master-test-upload-coverage-ubuntu:
 
-    # The tests will run on ubuntu with python versions 3.8, 3.9, and 3.10.
+    # The tests will run on ubuntu 22.04 with python version 3.10.
     # Add other OSes like windows and macOS if needed as well as other Python versions  
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10"]
 
     steps:
       # The steps here are essentially command-line arguments that will be ran on the cloud with the above configurations  
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
-      # Here we install the package of this repositories as well as other required packages 
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip
-        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-        pip install -e .
+        # if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+        python -m pip install -e .[test]
+        python -m pip install coveralls
 
-    #   # Finally, we run the package unit-tests on the specified OS and python versions.
+    #   # Run the package tests and generate the coverage report
+    # - name: Test with pytest
+    #   run: |
+    #     pytest tests/ --cov=pyslsqp --cov-report lcov
+
+    #   # Upload the coverage report to coveralls
+    # - name: Coveralls GitHub Action
+    #   uses: coverallsapp/github-action@v2.3.0
+    #   with:
+    #     github-token: ${{ secrets.COVERALLS_REPO_TOKEN}}
+    #     file: ./coverage.lcov
+
+  install-test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04, macos-14, windows-2022]
+        python-version: ["3.7", "3.8", "3.10", "3.12"]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        update-environment: true
+    
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        python -m pip install .[test]
+
     # - name: Test with pytest
     #   run: |
     #     pytest
+
+  install-test-interfaces:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04, macos-14, windows-2022]
+        python-version: ["3.8", "3.10", "3.12"]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        update-environment: true
+    
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        python -m pip install .[test, interfaces]
+
+    # - name: Test with pytest
+    #   run: |
+    #     pytest -m "interfaces"
