--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -51,7 +51,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, macos-14, windows-2022]
-        python-version: ["3.7", "3.8", "3.10", "3.12"]
+        python-version: ["3.8", "3.10", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -89,7 +89,7 @@ jobs:
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip
-        python -m pip install .[test, interfaces]
+        python -m pip install .[test,interfaces]
 
     # - name: Test with pytest
     #   run: |
