Deprecate csdl since dependencies are fixed. Move csdl out of interfaces in pyproject.toml. Update docs_pages_workflow node versions and ssh-agent.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,7 +111,7 @@ pycutest = [
     "pycutest", # Needs manual installation of the CUTEst library with the test problems
 ]
 interfaces = [
-    "csdl @ git+https://github.com/LSDOlab/csdl.git",
+    # "csdl @ git+https://github.com/LSDOlab/csdl.git", # csdl is deprecated with dependencies fixed in the main package
     "csdl_alpha @ git+https://github.com/LSDOlab/csdl_alpha.git",
     "jax[cpu]",
     "openmdao",
