--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -94,3 +94,28 @@ jobs:
     # - name: Test with pytest
     #   run: |
     #     pytest -m "interfaces"
+
+  install-test-csdl-old:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04, macos-14, windows-2022]
+        python-version: ["3.10"]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        update-environment: true
+    
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        python -m pip install .[test,csdl]
+
+    # - name: Test with pytest
+    #   run: |
+    #     pytest -m "interfaces"
