--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -89,13 +89,15 @@ jobs:
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip
-        python -m pip install .[test,interfaces]
+        python -m pip install .[test,qpsolvers,pycutest,openmdao,cvxopt,jax]
 
     # - name: Test with pytest
     #   run: |
     #     pytest -m "interfaces"
 
-  install-test-csdl-old:
+  # new csdl only works with python >=3.9 
+  # old csdl has fixed dependencies which are not compatible with python <=3.8, and >=3.12
+  install-test-csdl:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
