--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -89,7 +89,7 @@ jobs:
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip
-        python -m pip install .[test,qpsolvers,pycutest,openmdao,cvxopt,jax]
+        python -m pip install .[test,qpsolvers,pycutest,openmdao,jax]
 
     # - name: Test with pytest
     #   run: |
@@ -117,6 +117,38 @@ jobs:
       run: | 
         python -m pip install --upgrade pip
         python -m pip install .[test,csdl]
+
+    # - name: Test with pytest
+    #   run: |
+    #     pytest -m "interfaces"
+
+  install-test-cvxopt:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04, macos-14, windows-2022]
+        python-version: ["3.8", "3.10", "3.12"]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        update-environment: true
+    
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        python -m pip install .[test]
+    
+    - name: Install cvxopt
+      run: | 
+        conda config --add channels conda-forge
+        conda config --set channel_priority strict
+        conda install cvxopt
+
 
     # - name: Test with pytest
     #   run: |
