--- a/old_docs/package.json
+++ b/old_docs/package.json
@@ -14,20 +14,19 @@
         "write-heading-ids": "docusaurus write-heading-ids"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-beta.6",
+        "@docusaurus/core": "3.0.0",
         "@docusaurus/plugin-client-redirects": "*",
-        "@docusaurus/preset-classic": "2.0.0-beta.6",
-        "@mdx-js/react": "^1.6.21",
+        "@docusaurus/preset-classic": "3.0.0",
+        "@mdx-js/react": "^3.0.0",
         "@svgr/webpack": "^5.5.0",
         "clsx": "^1.1.1",
         "file-loader": "^6.2.0",
-        "hast-util-is-element": "^1.1.0",
         "htmltojsx": "^0.3.0",
-        "prism-react-renderer": "^1.2.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "rehype-katex": "^4.0.0",
-        "remark-math": "^3.0.1",
+        "prism-react-renderer": "^2.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "rehype-katex": "^7.0.0",
+        "remark-math": "^6.0.0",
         "url-loader": "^4.1.1"
     },
     "browserslist": {
