--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -77,7 +77,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, macos-14, windows-2022]
-        python-version: ["3.9", "3.10", "3.12"]
+        python-version: ["3.9"]
+        # python-version: ["3.9", "3.10", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
