Add IPOPT interface through CasADi. Add IPOPT tests and docs. Add cloud testing for everything except SNOPT.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ __pycache__
 *_junk*
 *_dev*
 
+# default output file for ipopt
+ipopt_output.txt
+# OpenMDAO generated reports
+reports/
+
 # File systems
 *.DS_Store
 # **/*.DS_Store
