--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,13 +30,13 @@ jobs:
       run: | 
         python -m pip install --upgrade pip
         # if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-        python -m pip install -e .[test]
+        python -m pip install -e .[test, jax, openmdao, casadi, csdl, csdl_alpha]
         python -m pip install coveralls
 
-    #   # Run the package tests and generate the coverage report
-    # - name: Test with pytest
-    #   run: |
-    #     pytest tests/ --cov=modopt --cov-report lcov
+      # Run the package tests and generate the coverage report
+    - name: Test with pytest
+      run: |
+        pytest -m "not snopt" tests/ --cov=modopt --cov-report lcov
 
     #   # Upload the coverage report to coveralls
     # - name: Coveralls GitHub Action
