--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,7 +103,7 @@ csdl_alpha = [
     "csdl_alpha @ git+https://github.com/LSDOlab/csdl_alpha.git",
 ]
 qpsolvers = [
-    "qpsolvers[open_source_solvers]", # Installs the library with open source QP solvers
+    "qpsolvers[wheels_only]", # Installs the library with open source QP solvers with pre-complied binaries
 ]
 cvxopt = [    # cvxopt is already installed with qpsolvers[open_source_solvers]
     "cvxopt",
@@ -177,4 +177,7 @@ omit = [
     # Only for local testing
     # "modopt/core/optimization_algorithms/simulated_annealing.py",
     # "modopt/core/optimization_algorithms/interior_point.py",
+    # "modopt/external_libraries/pycutest/*",
+    # "modopt/external_libraries/qpsolvers/*",
+    # "modopt/external_libraries/cvxopt/*",
     ]
