Add qpsolvers, its tests and docs. Add Optimizer method to check for callbacks_declared and raise errors/warnings. Add more warnings in ProblemLite when using FD. Add QP problems into all_problem_types.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,6 +149,7 @@ markers = [
     "slsqp: marks tests as slsqp (deselect with '-m \"not slsqp\"')",
     "pyslsqp: marks tests as pyslsqp (deselect with '-m \"not pyslsqp\"')",
     "ipopt: marks tests as ipopt (deselect with '-m \"not ipopt\"')",
+    "qpsolvers: marks tests as qpsolvers (deselect with '-m \"not qpsolvers\"')",
 ]
 
 [tool.coverage.run]
