--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,8 +104,10 @@ csdl_alpha = [
 ]
 qpsolvers = [
     "qpsolvers[wheels_only]", # Installs the library with open source QP solvers with pre-complied binaries
+    "quadprog",               # quadprog and osqp are installed with qpsolvers[open_source_solvers]
+    "osqp",                   # but not with qpsolvers[wheels_only]
 ]
-cvxopt = [    # cvxopt is already installed with qpsolvers[open_source_solvers]
+cvxopt = [    # cvxopt is already installed with qpsolvers[open_source_solvers] or qpsolvers[wheels_only]
     "cvxopt",
 ]
 sqp = [
@@ -179,6 +181,5 @@ omit = [
     # "modopt/core/optimization_algorithms/simulated_annealing.py",
     # "modopt/core/optimization_algorithms/interior_point.py",
     # "modopt/external_libraries/pycutest/*",
-    # "modopt/external_libraries/qpsolvers/*",
     # "modopt/external_libraries/cvxopt/*",
     ]
