--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -37,9 +37,10 @@ jobs:
       run: |
         mkdir cutest
         cd cutest
-        git clone https://github.com/ralna/ARCHDefs ./archdefs
-        git clone https://github.com/ralna/SIFDecode ./sifdecode
+        git clone https://github.com/ralna/ARCHDefs ./archdefs    # ; cd archdefs; git checkout v2.2.8; cd ..
+        git clone https://github.com/ralna/SIFDecode ./sifdecode  # ; cd sifdecode; git checkout v2.4.2; cd ..
         git clone https://github.com/ralna/CUTEst ./cutest
+        cd cutest; git checkout v2.2.0; cd ..
         git clone https://bitbucket.org/optrove/sif ./mastsif
         cd ..
 
