--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,7 @@ markers = [
     "ipopt: marks tests as ipopt (deselect with '-m \"not ipopt\"')",
     "qpsolvers: marks tests as qpsolvers (deselect with '-m \"not qpsolvers\"')",
     "cvxopt: marks tests as cvxopt (deselect with '-m \"not cvxopt\"')",
+    "pycutest: marks tests as pycutest (deselect with '-m \"not pycutest\"')",
 ]
 
 [tool.coverage.run]
@@ -177,6 +178,7 @@ omit = [
     "modopt/core/optimization_algorithms/sqp_surf_dense.py",
     # omit snopt interface as it's licensed and cannot be put on cloud
     "modopt/external_libraries/snopt/*",
+    # "modopt/external_libraries/pycutest/*",
 
     # Only for local testing
     # "modopt/core/optimization_algorithms/simulated_annealing.py",
