Make outputs optional for optimizers, and write no outputs to file by default.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,6 +142,7 @@ visualization = [
 [tool.pytest.ini_options]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "slsqp: marks tests as slsqp (deselect with '-m \"not slsqp\"')",
     "interfaces: marks tests as interfaces (deselect with '-m \"not interfaces\"')",
     "csdl: marks tests as csdl (deselect with '-m \"not csdl\"')",
     "csdl_alpha: marks tests as csdl_alpha (deselect with '-m \"not csdl_alpha\"')",
