Remove ScipyOptimizer subclasses. Rename instructional NelderMead to NelderMeadSimplex. Add dummy files for COBYQA.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,6 +150,11 @@ markers = [
     "snopt: marks tests as snopt (deselect with '-m \"not snopt\"')",
     "slsqp: marks tests as slsqp (deselect with '-m \"not slsqp\"')",
     "cobyla: marks tests as cobyla (deselect with '-m \"not cobyla\"')",
+    "bfgs: marks tests as bfgs (deselect with '-m \"not bfgs\"')",
+    "lbfgsb: marks tests as lbfgsb (deselect with '-m \"not lbfgsb\"')",
+    "trust_constr: marks tests as trust_constr (deselect with '-m \"not trust_constr\"')",
+    "cobyqa: marks tests as cobyqa (deselect with '-m \"not cobyqa\"')",
+    "nelder_mead: marks tests as nelder_mead (deselect with '-m \"not nelder_mead\"')",
     "pyslsqp: marks tests as pyslsqp (deselect with '-m \"not pyslsqp\"')",
     "ipopt: marks tests as ipopt (deselect with '-m \"not ipopt\"')",
     "qpsolvers: marks tests as qpsolvers (deselect with '-m \"not qpsolvers\"')",
