--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,7 @@ markers = [
     "interfaces: marks tests as interfaces (deselect with '-m \"not interfaces\"')",
     "recording: marks tests as recording (deselect with '-m \"not recording\"')",
     "visualization: marks tests as visualization (deselect with '-m \"not visualization\"')",
+    "benchmarking: marks tests as benchmarking (deselect with '-m \"not benchmarking\"')",
     "csdl: marks tests as csdl (deselect with '-m \"not csdl\"')",
     "csdl_alpha: marks tests as csdl_alpha (deselect with '-m \"not csdl_alpha\"')",
     "openmdao: marks tests as openmdao (deselect with '-m \"not openmdao\"')",
