--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ __pycache__
 *_junk*
 *_dev*
 
-# modopt outputs directory
+# modOpt outputs directory
 *_outputs/
 # default output file for ipopt
 ipopt_output.txt
