Add optimizer development docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,8 +106,9 @@ csdl_alpha = [
     "csdl_alpha @ git+https://github.com/LSDOlab/csdl_alpha.git",
 ]
 qpsolvers = [
-    "qpsolvers[wheels_only]", # Installs the library with open source QP solvers with pre-complied binaries
-    "quadprog",               # quadprog and osqp are installed with qpsolvers[open_source_solvers]
+    "qpsolvers",
+    # "qpsolvers[wheels_only]", # Installs the library with open source QP solvers with pre-complied binaries
+    "quadprog",               # quadprog and osqp MAY BE installed with qpsolvers[open_source_solvers]
     "osqp",                   # but not with qpsolvers[wheels_only]
 ]
 cvxopt = [    # cvxopt is already installed with qpsolvers[open_source_solvers] or qpsolvers[wheels_only]
