Update version numbers, Add keep_viz_open parameter to all optimizer docstrings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,7 @@ dependencies = [
     "matplotlib>=3.4,<4",
 ]
 classifiers=[
-    'Development Status :: 4 - Beta',
-    # 'Development Status :: 5 - Production/Stable',
+    'Development Status :: 5 - Production/Stable',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
